test_suite/tests/errors/unknown_transition_target.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            go? { => @nowhere; }
    }
}
