test_suite/tests/errors/unknown_transition_target.stderr
error: Unknown state `nowhere`
 --> tests/errors/unknown_transition_target.rs:6:23
  |
6 |             go? { => @nowhere; }
  |                       ^^^^^^^
